Made button responsive, solved responsive issue in gform

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
       <!--this is the contact form-->
       <div class="container">
           <div class="row">
-              <div class="col-md-6 cform offset-md-1">
+              <div class="col-md-6 col-sm-12">
                 <iframe class="cstyle" src="https://docs.google.com/forms/d/e/1FAIpQLSd-nFcwn6aoMjppf5XNL21A8oS8appHeqFsWVCRQbTubWiOGQ/viewform?embedded=true" width="640" height="705" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
         <div class="col-xl-5">
@@ -73,7 +73,7 @@
                     <h2>Subscribe and get all the latest updates about VIKSPIK Photography!</h2>
                     <br>
                     <br>
-                    <div class="col-5 offset-sm-5">
+                    <div style="text-align: center;">
                       <a href="subscribe.html" target="_blank">
                     <button type="button" class="btn btn-light btn-lg">SUBSCRIBE</button>
                       </a>
