--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                   
                 <ul class="navbar-nav">
                   <li class="nav-item"><a href="privacypolicy.html" target="_blank" class="nav-link" style="margin-left: 400px;">PRIVACY POLICY</a></li>
-                  <li class="nav-item"><a href="" class="nav-link" style="margin-left: 30px;">T&Cs</a></li>
+                  <li class="nav-item"><a href="t&c.html" class="nav-link" style="margin-left: 30px;">T&Cs</a></li>
                   <li class="nav-item"><a href="" class="nav-link" style="margin-left: 30px;">FAQs</a></li>
                   <li class="nav-item"><a href="" class="nav-link" style="margin-left: 30px;">&copy; VIKSPIK|VIKAS VERMA</a></li>
                 </ul>
